--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div class="container">
+		<div class="row">
+  			<div class="span12">
+  				<%= yield %>
+  			</div>
+ 		</div>
+	</div>
 
-<%= yield %>
+
 
 </body>
 </html>
