--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -2,6 +2,7 @@
 <br>
 
 <%= render 'form' %>
-
+    
+<%= link_to 'Destroy', @profile, method: :delete, data: { confirm: 'Are you sure?' } %> |
 <%= link_to 'Show', @profile %> |
 <%= link_to 'Back', profiles_path %>
