--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -6,11 +6,12 @@
 <table class="table table-striped table-hover">
     <thead>
     <tr>
-      <th>Objective</th>
-      <th>Latest company</th>
+
       <th>Latest position</th>
-      <th>Latest salary</th>
+      <th>Platform</th>
+      <th>Experience in years</th>
       <th>Degree</th>
+      <th>Min. salary</th>
       <th>Last update</th>
       
     </tr>
