--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Lastcv</title>
+  <title>BriefCV</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -10,6 +10,31 @@
 	<div class="container">
 		<div class="row">
   			<div class="span12">
+        <h2><%= link_to "BriefCV", root_path %></h2>  
+        Recruiter:
+          <% if current_user %>
+            Logged in as <strong><%= current_user.email %></strong>.
+            <%= link_to "Log Out", logout_path %> or 
+            <%= link_to "Edit", edit_user_path(current_user) %>
+          <% else %>
+            <%= link_to "Sign Up", signup_path %> or
+            <%= link_to "Log In", login_path %>
+          <% end %>
+          <br><br>
+        Candidate:
+        <% if current_candidate %>
+          Signed in as <strong><%= current_candidate.name %></strong>
+          <%= link_to "Sign out", signout_path, id: "sign_out" %>
+          <br>
+          <% if current_candidate.profile %>
+            <%= link_to 'Edit profile', edit_profile_path(current_candidate.profile) %>
+            <%else%>
+            <%= link_to 'Create profile', new_profile_path %>
+          <%end%>
+        <% else %>
+          <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
+        <% end %>
+        <br><br>
   				<%= yield %>
   			</div>
  		</div>
