--- a/app/views/invitations/_invitation.html.erb
+++ b/app/views/invitations/_invitation.html.erb
@@ -1,1 +1,8 @@
-<%= link_to invitation.user.company_name + "- " + invitation.created_at.to_s, invitation %><br>
+<%= link_to invitation.user.company_name + "- " + invitation.created_at.to_s, invitation %>
+<% if invitation.approval %>
+	(you accepted)
+<% else %>
+	<%= button_to "Accept", :controller => "invitations", :action => "accept", :id => invitation.id %>
+<% end %>
+
+<br>
