--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,26 +1,1 @@
-<h2>Listing profiles</h2>
-<div class ="span3">
-  <%= render 'queries/form' %>
-</div> 
-<div class ="span8">
-<table class="table table-striped table-hover">
-    <thead>
-    <tr>
-
-      <th>Latest position</th>
-      <th>Platform</th>
-      <th>Experience in years</th>
-      <th>Degree</th>
-      <th>Min. salary</th>
-      <th>Last update</th>
-      
-    </tr>
-  </thead>
-    <tbody>
-      <%= render @profiles %>
-    </tbody>
-</table>
-
-
-<%= link_to 'New Profile', new_profile_path %>
-</div> 
+<%= render "filter_table" %>
