--- a/app/views/profiles/_profile.html.erb
+++ b/app/views/profiles/_profile.html.erb
@@ -5,7 +5,7 @@
 
 	<td>
 		<% profile.platforms.each do |platform| %>
-		  		<%= platform.name %>,
+		  		<%= platform.name %> 
 		<%end%> 
 	</td>
 	<td>
