--- a/app/views/profiles/confirm.html.erb
+++ b/app/views/profiles/confirm.html.erb
@@ -1,84 +1,8 @@
-<h4>Are you sure you want to request this candidate's contact details?<br>
-	If the candidate approves you will receive the candidates full name, facebook id, and email address and you will be charged US$ 4.95</h4>
-	<br><br>
-	<%= button_to "Confirm request", :action => "invite" %>
-<br><br><br>
-<p id="notice"><%= notice %></p>
-Last updated: <%= time_ago_in_words(@profile.updated_at)%> ago 
-<h4><u>Job status</u></h4>
-<b> Notice period: </b>
-  	<%= @profile.notice_period.to_s %> week(s)
-<br><b> Min. desired annual salary: </b>  	
-  	<%= @profile.general_min_yearly_salary %> USD
-<br>
-<b>U.S. work permit: </b><% if @profile.work_permit == true %>Yes<%else%>No<% end %>
-<br>
-<b>Number of self-built iOS apps in the app store: </b>
-<%= @profile.ios_apps.to_s %>
-
-
-<h4><u>Job history</u></h4>
-
-<% if @profile.current_platforms %>
-<b><% if @profile.latest_job_current == true%>Current job<%else%>Last job:<%end%></b>
-<%= @profile.latest_job_start_date %> till <% if @profile.latest_job_current == true%> now<%else%><%= @profile.latest_job_end_date %>.<%end%>
-<br>
-<% if @profile.latest_job_company_name != "" %> <b>Company name: </b><%= @profile.latest_job_company_name %><br><% end %>
-<% if @profile.latest_job_company_size %> <b>Company size: </b><%= number_of_employees(@profile.latest_job_company_size) %> employees <% end %>
-<br>
-<b>Contract:</b> <%= contract(@profile.latest_job_contract) %>
-<br>
-<% if @profile.latest_job_position %><b>Position: </b><%= @profile.latest_job_position.name %><% end %>
-<br>
-<% if @profile.latest_job_team_size %><b>Team size: </b><%= @profile.latest_job_team_size %><% end %>
-
-
-<br>
-<b>Platforms:</b>
-	<% @profile.current_platforms.each do |platform| %>
-  		<%= platform.name %>,
-  	<%end%> 
-<br>
-<b>Employed skills:</b>
-  	<% @profile.current_skills.each do |skill| %>
-  		<%= skill.name %>,
-  	<%end%> 
-	<% if @profile.latest_job_annual_salary %><br><b>Annual salary:</b> <%= @profile.latest_job_annual_salary %> USD<%end%>
-	<% if @profile.latest_job_hourly_salary %><br><b>Hourly salary:</b> <%= @profile.latest_job_hourly_salary %> USD<%end%>
-<%end%>
-
-
-<h4><u>Education</u></h4>
-
-<% if @profile.undergrad_degree == true %>
-	<b>	Undergraduate degree:</b>
-	<br><%= @profile.undergrad_institution.name if @profile.undergrad_institution%>
-	<br>Major: <%= @profile.undergrad_subject.name if @profile.undergrad_subject%>
-	<br>GPA: <%= @profile.undergrad_gpa %>
-	<br><br>
-<%end%>
-
-<% if @profile.grad_degree == true %>
-<b>	Graduate degree:</b>
-	<br><%= @profile.grad_institution.name if @profile.grad_institution %>
-	<br><%= @profile.grad_subject.name if @profile.grad_subject  %>
-	<br>GPA:<%= @profile.grad_gpa %>
-	<br><br>
-<%end%>
-
-<% if @profile.postgrad_degree == true %>
-<b>	Postgraduate degree: </b>
-	<br><%= @profile.postgrad_institution.name if @profile.postgrad_institution %>
-	<br><%= @profile.postgrad_subject.name if @profile.postgrad_subject %>
-	<br>GPA: <%= @profile.postgrad_gpa %>
-	<br><br>
-<%end%>
-<h4><u>Standardized test scores</u></h4>	
-	<% if @profile.sat_math %><%= "SAT math: " + @profile.sat_math.to_s %><br><%end%>
-	<% if @profile.sat_critical_reading %><%= "SAT critical reading: " + @profile.sat_critical_reading.to_s  %><br><%end%>
-	<% if @profile.sat_writing %><%= "SAT writing: " + @profile.sat_writing.to_s  %><br><%end%>
-	<% if @profile.act_english %><%= "ACT English: " + @profile.act_english.to_s %><br><%end%>
-	<% if @profile.act_math %><%= "ACT math: " + @profile.act_math.to_s %><br><%end%>
-	<% if @profile.act_reading %><%= "ACT reading: " + @profile.act_reading.to_s %><br><%end%>
-	<% if @profile.act_science %><%= "ACT science: " + @profile.act_science.to_s %><br><%end%>
+<h4>Are you sure you want to request this candidate's contact details?</h4>
+	<b>If the candidate approves you will receive the candidates full name,<br> facebook id, and email address and you will be charged US$ 4.95
 <br><br>
+<%= button_to "Confirm request", :action => "invite" %>
+
+You will get the full amount refunded if any of the information in the anonymous profile<br> turns out to be false.</b>
+<br><br>
+<%= render "full_profile" %>
