--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,6 @@
 	<% if current_candidate.invitations.any? %>
 	Contact requests for you:<br><br>
 	<%= render current_candidate.invitations %>
-	<h5> If you accept a request, your name, email address, and Facebook url <br>will be submitted to the respective recruiter. </h5>
 	<% else %>
 	No requests yet.
 	<% end %>
@@ -12,7 +11,8 @@
 	<% if @approved_invitations.any? %>
 	<h4>Your accepted requests:</h4>
 	<% @invitations = @approved_invitations %>
-		<%= render "profiles/invitations_table" %>
+		<%= render "profiles/accepted_invitations_table" %>
+		<br>
 	<% end %> 
 
 	<% if @open_invitations.any? %>
@@ -20,6 +20,10 @@
 	<% @invitations = @open_invitations %>
 		<%= render "profiles/invitations_table" %>
 	<% end %>
+	<br>
+<% end %>
+
+<% unless current_candidate %>
 	<%= render "profiles/filter_table"%>
 <% end %>
 
